<resources>
    <string name="app_name">LookForward</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_description"><![CDATA[SMS Forwarder]]></string>
    <string name="signature">Developed by MPT424</string>
</resources>
